2024-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.91

	* Log runlevel switches, including startup/shutdown.

2024-03-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.90

	* When running start/stop/reload/restart, copy the output
	from the container to the requester's shell's standard output.

2024-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* vera.C (dump_terse): "state" maybe affixed by "(manual)", so put
	it in quotes.

	* inittab.C: Improve converted unit descriptions

	* proc_container_group.C: fix duplicated output to due unflushed
	buffer, oops.

	* Fix double invocation of rc.local_shutdown.

2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* inittab.C: Modify invocation of /etc/rc.d/rc.inet2 from
	/etc/rc.d/rc.M, to modify the former on the fly, before running
	it, in order to start each service from rc.inet2 in its own container.
	Fix stopping depedencies of all rc.M and rc.inet2 units.

	* Don't create an open file descriptor for every container's
	cgroup.eventsfd. Open it only when needed.

2024-03-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.02

2024-02-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Modify /etc/rc.d/rc.M on the fly, before running it, in order to
	start every rc.script it runs in its own container.

2024-02-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* --terse option. Minor bug fixes.

0.01 Initial release