@@ -5,4 +5,5 @@ set -e;
 echo "Now run \"vlad hook\" and reboot."
 echo ""
 echo "IMPORTANT: run \"vlad unhook\", reboot, then \"vlad unhook\" again"
-echo "before removing vera with removepkg."
+echo "before removing vera with removepkg, or before updating vera or sysvinit"
+echo "packages."
