@@ -1,3 +1,8 @@
+2024-03-31  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* "status" command: move more pid-related logic to the requesting
+	process, out of pid 1. Various fixes.
+
 2024-03-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Release 0.91
